--- a/src/main/resources/templates/guestbook/read.html
+++ b/src/main/resources/templates/guestbook/read.html
@@ -33,11 +33,13 @@
       'yyyy/MM/dd HH:mm:ss')}" readonly>
     </div>
 
-    <a th:href="@{/guestbook/modify(gno = ${dto.gno}, page=${requestDTO.page})}">
+    <a th:href="@{/guestbook/modify(gno = ${dto.gno}, page=${requestDTO.page},
+                type=${requestDTO.type}, keyword=${requestDTO.keyword})}">
       <button type="button" class="btn btn-primary">Modify</button>
     </a>
 
-    <a th:href="@{/guestbook/list(page=${requestDTO.page})}">
+    <a th:href="@{/guestbook/list(page=${requestDTO.page},
+              type=${requestDTO.type}, keyword=${requestDTO.keyword})}">
       <button type="button" class="btn btn-info">List</button>
     </a>
   </th:block>
